Displaying regatta results

--- a/SailScores.Web/Views/Club/Index.cshtml
+++ b/SailScores.Web/Views/Club/Index.cshtml
@@ -36,24 +36,20 @@
 <div class="row">
     <div class="col-md-12">
         <h2>Regatta!</h2>
-        <ul class="list-unstyled">
-            @foreach (var regatta in Model.CurrentRegattas)
+        @foreach (var regatta in Model.CurrentRegattas)
+        {
+            @if (regatta.UpdatedDate.HasValue && regatta.UpdatedDate > DateTime.Now.AddDays(-15))
             {
-            <li>
-                @regatta.StartDate?.ToString("D") - @regatta.EndDate?.ToString("D") <br />
-                <h3>
-                    <a href="~/@ViewData["ClubInitials"]/Regatta/@regatta.Season.Name/@regatta.Name">
-                        @regatta.Season.Name  @regatta.Name
-
-                    </a>
-                    @if (regatta.UpdatedDate.HasValue && regatta.UpdatedDate > DateTime.Now.AddDays(-15))
-                    {
-                        <i><small>Updated @regatta.UpdatedDate.ToApproxTimeAgoString()</small></i>
-                    }
-                </h3>
-            </li>
+                @regatta.StartDate?.ToString("D") @:- @regatta.EndDate?.ToString("D")
             }
-        </ul>
+            <h2>
+                <a href="~/@ViewData["ClubInitials"]/Regatta/@regatta.Season.Name/@regatta.Name">
+                    @regatta.Season.Name  @regatta.Name
+                </a>
+
+            </h2>
+            <br />
+        }
     </div>
 </div>
 }
