--- a/SailScores.Web/Views/Regatta/Details.cshtml
+++ b/SailScores.Web/Views/Regatta/Details.cshtml
@@ -137,9 +137,12 @@
             </div>
             <div class="tab-pane fade" id="@($"Results{fleet.ShortName}")" role="tabpanel"
                  aria-labelledby="@($"Results{fleet.ShortName}-tab")">
-                @if(Model.Item.Series.Any(s => s.FleetId == fleet.Id)){
-                    <span>HI There!!!</span>
-                } else {
+                @if (Model.Item.Series.Any(s => s.FleetId == fleet.Id))
+                {
+                    @await Html.PartialAsync("_ResultsTable", Model.Item.Series.First(s => s.FleetId == fleet.Id))
+                }
+                else
+                {
                     <span>No Results posted.</span>
                 }
             </div>
