Regatta Urls added and series hidden

--- a/SailScores.Web/Views/Club/Index.cshtml
+++ b/SailScores.Web/Views/Club/Index.cshtml
@@ -43,7 +43,7 @@
                 @regatta.StartDate?.ToString("D") @:- @regatta.EndDate?.ToString("D")
             }
             <h3>
-                <a href="~/@ViewData["ClubInitials"]/Regatta/@regatta.Season.Name/@regatta.Name">
+                <a href="~/@ViewData["ClubInitials"]/Regatta/@regatta.Season.Name/@regatta.UrlName">
                     @regatta.Season.Name  @regatta.Name
                 </a>
             </h3>
