--- a/SailScores.Web/Views/Regatta/Edit.cshtml
+++ b/SailScores.Web/Views/Regatta/Edit.cshtml
@@ -81,6 +81,13 @@
                                 </select>
                                 <span asp-validation-for="ScoringSystemId" class="text-danger"></span>
                             </div>
+                            <div class="form-group">
+                                <div class="checkbox">
+                                    <label>
+                                        <input asp-for="PreferAlternateSailNumbers" /> Prefer Alternate Sail Numbers
+                                    </label>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
