--- a/SailScores.Web/Views/Race/Details.cshtml
+++ b/SailScores.Web/Views/Race/Details.cshtml
@@ -57,6 +57,10 @@
                 </td>
                 <td>
                     @score.Competitor.SailNumber
+                    @if (!String.IsNullOrWhiteSpace(score.Competitor.AlternativeSailNumber))
+                    {
+                        @:(@score.Competitor.AlternativeSailNumber)
+                    }
                 </td>
                 <td>
                     @score.Competitor.Name
