--- a/SailScores.Web/Views/Competitor/Edit.cshtml
+++ b/SailScores.Web/Views/Competitor/Edit.cshtml
@@ -56,7 +56,7 @@
                         <div class="card-body">
                             <div class="form-group">
                                 <label asp-for="FleetIds" class="control-label">Fleets</label>
-                                <select id="seriesIds" asp-for="FleetIds" class="form-control" multiple>
+                                <select id="seriesIds" asp-for="FleetIds" class="form-control selectpicker" multiple>
                                     @foreach (var fleet in Model.FleetOptions)
                                     {
                                         <option value="@fleet.Id">
