--- a/SailScores.Web/Views/Regatta/Edit.cshtml
+++ b/SailScores.Web/Views/Regatta/Edit.cshtml
@@ -4,7 +4,7 @@
 @model SailScores.Web.Models.SailScores.RegattaWithOptionsViewModel
 
 @{
-    ViewData["Title"] = "Edit "+ Model.Name;
+    ViewData["Title"] = "Edit " + Model.Name;
     Layout = "~/Views/Shared/_ClubLayout.cshtml";
 }
 
@@ -46,7 +46,7 @@
             <div id="fleets" class="form-group">
                 <label asp-for="FleetIds" class="control-label">Fleets</label>
                 <small>Each fleet will be scored separately.</small>
-                <select multiple asp-for="FleetIds" class="form-control custom-select">
+                <select multiple asp-for="FleetIds" class="form-control custom-select selectpicker">
                     @foreach (var fleet in Model.FleetOptions.OrderBy(c => c.Name))
                     {
                         <option value="@fleet.Id">
@@ -107,4 +107,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
 }
