--- a/SailScores.Web/Views/Competitor/Create.cshtml
+++ b/SailScores.Web/Views/Competitor/Create.cshtml
@@ -11,7 +11,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create"
+              asp-route-returnurl="@ViewData["ReturnUrl"]">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label">Name <em>Required</em></label>
